fix wrap

--- a/css/style.scss
+++ b/css/style.scss
@@ -83,14 +83,14 @@ main {
     &__social {
         display: flex;
         gap: 40px;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         margin-bottom: 60px;
     }
     &__field {
         display: flex;
         flex-direction: row;
         gap: 40px;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         margin-bottom: 60px;
     }
     &__button {
@@ -202,7 +202,6 @@ main {
         border: 1px solid #EFEFEF;
         &:focus {
             outline: none;
-            border-left-width: 5px;
             border-left: 2px solid #3597FC;
         }
         &::placeholder {
@@ -218,7 +217,7 @@ main {
     padding: 0;
     margin-top: 40px;
     margin-bottom: 140px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     &__item {
         display: flex;
         align-items: center;
@@ -297,6 +296,9 @@ main {
     .registration {
         flex-direction: row;
     }
+    .registration__bg {
+
+    }
 }
 
 @media (max-width: 820px) {
@@ -317,8 +319,17 @@ main {
         max-width: 600px;
     }
     .registration__bg {
-        height: 100px;
-        width: 100%;
+        height: 300px;
+        width: auto;
+    }
+    .form__social {
+        flex-wrap: wrap;
+    }
+    .form__field {
+        flex-wrap: wrap;
+    }
+    .radio-group {
+        flex-wrap: wrap;
     }
 }
 
